[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/MainFont.tres" type="FontFile" id=1]
[ext_resource path="res://fonts/courbd.ttf" type="FontFile" id=2]
[ext_resource path="res://fonts/MainFontBold.tres" type="FontFile" id=3]
[ext_resource path="res://fonts/MainFont-Style.tres" type="StyleBox" id=5]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="FontFile" id=5]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[node name="Settings" type="Node2D"]
script = ExtResource( 6 )

[node name="SaveWindow" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -35.0
offset_right = 554.0
offset_bottom = 392.0

[node name="InnerWindow" type="ColorRect" parent="SaveWindow"]
offset_left = 3.0
offset_top = 3.0
offset_right = 601.0
offset_bottom = 424.0
color = Color( 0, 0, 0, 1 )

[node name="FileList" type="RichTextLabel" parent="SaveWindow/InnerWindow"]
offset_left = 246.0
offset_top = 132.0
offset_right = 411.0
offset_bottom = 266.0
scale = Vector2( 2, 2 )
theme_override_fonts/bold_font = ExtResource( 3 )
theme_override_fonts/normal_font = ExtResource( 1 )
theme_override_styles/normal = SubResource( 1 )
bbcode_enabled = true
text = "file 1
file 2
djkdjkdl
sjkjs
sjkdlsjd
ksjk8e
shhjsk
jhdjkd
hkssl
99999"
meta_underlined = false
text = "file 1
file 2
djkdjkdl
sjkjs
sjkdlsjd
ksjk8e
shhjsk
jhdjkd
hkssl
99999"

[node name="FileName" type="LineEdit" parent="SaveWindow/InnerWindow"]
offset_left = 246.0
offset_top = 44.0
offset_right = 411.0
offset_bottom = 67.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = SubResource( 2 )
max_length = 14
context_menu_enabled = false
caret_blink = true

[node name="SaveName" type="Label" parent="SaveWindow/InnerWindow"]
offset_left = 244.0
offset_top = 5.0
offset_right = 344.0
offset_bottom = 24.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
text = "Name:"

[node name="Files" type="Label" parent="SaveWindow/InnerWindow"]
offset_left = 245.0
offset_top = 93.0
offset_right = 395.0
offset_bottom = 112.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
text = "Existing Files:"

[node name="Save" type="Container" parent="SaveWindow/InnerWindow"]
offset_left = 20.0
offset_top = 44.0
offset_right = 187.0
offset_bottom = 90.0

[node name="Text" type="Label" parent="SaveWindow/InnerWindow/Save"]
offset_right = 84.0
offset_bottom = 23.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = ExtResource( 5 )
text = "Save"
align = 1

[node name="Load" type="Container" parent="SaveWindow/InnerWindow"]
offset_left = 20.0
offset_top = 100.0
offset_right = 187.0
offset_bottom = 145.0

[node name="Text" type="Label" parent="SaveWindow/InnerWindow/Load"]
offset_right = 84.0
offset_bottom = 23.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = ExtResource( 5 )
text = "Load"
align = 1

[node name="Delete" type="Container" parent="SaveWindow/InnerWindow"]
offset_left = 20.0
offset_top = 156.0
offset_right = 188.0
offset_bottom = 202.0

[node name="Text" type="Label" parent="SaveWindow/InnerWindow/Delete"]
offset_right = 84.0
offset_bottom = 23.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = ExtResource( 5 )
text = "Delete"
align = 1

[node name="Quit" type="Container" parent="SaveWindow/InnerWindow"]
offset_left = 20.0
offset_top = 212.0
offset_right = 188.0
offset_bottom = 259.0

[node name="Text" type="Label" parent="SaveWindow/InnerWindow/Quit"]
offset_right = 84.0
offset_bottom = 23.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = ExtResource( 5 )
text = "Quit"
align = 1

[node name="Back" type="Container" parent="SaveWindow/InnerWindow"]
offset_left = 20.0
offset_top = 268.0
offset_right = 188.0
offset_bottom = 315.0

[node name="Text" type="Label" parent="SaveWindow/InnerWindow/Back"]
offset_right = 84.0
offset_bottom = 23.0
scale = Vector2( 2, 2 )
theme_override_fonts/font = ExtResource( 1 )
theme_override_styles/normal = ExtResource( 5 )
text = "Back"
align = 1

[node name="Warning" type="Label" parent="SaveWindow/InnerWindow"]
visible = false
offset_left = 25.0
offset_top = 334.0
offset_right = 161.0
offset_bottom = 383.0
scale = Vector2( 1.5, 1.5 )
theme_override_fonts/font = SubResource( 5 )
theme_override_styles/normal = SubResource( 6 )
text = "Warning!
No file name!"

[connection signal="child_entered_tree" from="." to="." method="_on_Settings_child_entered_tree"]
[connection signal="tree_entered" from="SaveWindow" to="." method="_on_SaveWindow_tree_entered"]
[connection signal="text_changed" from="SaveWindow/InnerWindow/FileName" to="." method="_on_FileName_text_changed"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Save" to="." method="_on_Save_gui_input"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Save/Text" to="." method="_on_Text_gui_input"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Load" to="." method="_on_Load_gui_input"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Delete" to="." method="_on_Delete_gui_input"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Quit" to="." method="_on_Quit_gui_input"]
[connection signal="gui_input" from="SaveWindow/InnerWindow/Back" to="." method="_on_Back_gui_input"]
